--- a/css/main.css
+++ b/css/main.css
@@ -301,7 +301,7 @@ ul {
 	body {
 		background-color: #fff;
 		background-image: none;
-		margin: 2.0876827%; /* 10px/479px */
+		margin: 10px;
 	}
 
 	header {
