--- a/css/main.css
+++ b/css/main.css
@@ -276,6 +276,7 @@ ul {
 @media only screen and (min-width: 480px) and (max-width:767px) {
 
 	body {
+		margin: 10px;
 		background-image: none;
 	}
 
