--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 /* Color Swatch ------------------------------------
 	colorado blue		003d73	rgba(0,61,115,1.0)
-	colorado green		ccbe00	rgba(204,190,0,1.0)
-	colorado red		cd1c24	rgba(237,28,36,1.0)
+	colorado green	ccbe00		rgba(204,190,0,1.0)
+	colorado red		cd1c24		rgba(237,28,36,1.0)
 --------------------------------------------------*/
 
 /* Font to be used ---------------------------------
@@ -345,6 +345,7 @@ ul {
 	}
 	
 	#main_nav {
+		background-color: #ccbe00;
 		float: none;
 	}
 	
