--- a/css/main.css
+++ b/css/main.css
@@ -340,12 +340,15 @@ ul {
 		display: none;
 	}
 	
+	#explore {
+		background-color: #ccbe00;
+	}
+	
 	#explore h3 {
 		color: #003d73;
 	}
 	
 	#main_nav {
-		background-color: #ccbe00;
 		float: none;
 	}
 	
