--- a/css/main.css
+++ b/css/main.css
@@ -369,7 +369,7 @@ ul {
 	}
 	
 	#links {
-		width: 100%;
+		max-width: 100%;
 		float: none;
 		margin: 0 0 10px;
 	}
@@ -383,7 +383,7 @@ ul {
 	}
 	
 	#subscription_form {
-		width: 100%;
+		max-width: 100%;
 		float: none;
 	}
 	
