--- a/css/main.css
+++ b/css/main.css
@@ -371,7 +371,7 @@ ul {
 	#links {
 		max-width: 100%;
 		float: none;
-		margin: 0 0 10px;
+		margin: 0 auto 10px;
 	}
 	
 	#links ul li {
@@ -384,6 +384,7 @@ ul {
 	
 	#subscription_form {
 		max-width: 100%;
+		margin; 0 auto;
 		float: none;
 	}
 	
