--- a/css/main.css
+++ b/css/main.css
@@ -364,12 +364,13 @@ ul {
 	}
 	
 	#footer {
+		margin: 100%;
 		color: #003d73;
 		text-shadow: none;
 	}
 	
 	#links {
-		max-width: 439px;
+		max-width: 100%;
 		float: none;
 		margin: 0 auto 10px;
 	}
@@ -383,7 +384,7 @@ ul {
 	}
 	
 	#subscription_form {
-		max-width: 439px;
+		max-width: 100%;
 		margin: 0 auto;
 		color: #003d73;
 		float: none;
