--- a/css/main.css
+++ b/css/main.css
@@ -372,7 +372,7 @@ ul {
 	#links {
 		max-width: 100%;
 		float: none;
-		margin: 0 auto 10px;
+		/* margin: 0 auto 10px; */
 	}
 	
 	#links ul li {
@@ -385,7 +385,7 @@ ul {
 	
 	#subscription_form {
 		max-width: 100%;
-		margin: 0 auto;
+		/* margin: 0 auto; */
 		color: #003d73;
 		float: none;
 	}
