--- a/css/main.css
+++ b/css/main.css
@@ -370,7 +370,8 @@ ul {
 	}
 	
 	#links {
-		max-width: 479px;
+		display: block;
+		max-width: 100%;
 		float: none;
 		/* margin: 0 auto 10px; */
 	}
@@ -384,7 +385,8 @@ ul {
 	}
 	
 	#subscription_form {
-		max-width: 479px;
+		display: block;
+		max-width: 100%;
 		/* margin: 0 auto; */
 		color: #003d73;
 		float: none;
