--- a/css/main.css
+++ b/css/main.css
@@ -198,7 +198,7 @@ aside {
 }
 
 #footer {
-	width: 100%; /* same width as wrapper */
+	/* width: 100%; same width as wrapper */
 	color: #fff;
 	font-size: 1.25em; /*20px*/
 	text-shadow: 0px 1px 0px #000, 0px 0px 6px #000;
@@ -373,15 +373,7 @@ ul {
 		float: none;
 		margin: 0 auto 10px;
 	}
-	
-	#links ul li {
-		display: inline;
-	}
-	
-	ul {
-		list-style-type: square;
-	}
-	
+
 	#subscription_form {
 		margin: 0 auto;
 		color: #003d73;
