--- a/css/main.css
+++ b/css/main.css
@@ -244,7 +244,7 @@ ul {
 
 #links {
 	width: 47.5%; /* (400px - 20px padding) 380px /800px */
-	padding: 0 /* 1.6666666666667% 5px/300px */ 3.3333333333333% /* 10px/300px */;
+	/* padding: 0 3.3333333333333%; 1.6666666666667% 5px/300px  10px/300px */
 	background-color: rgba(0,61,115,0.3);
 	border-radius: 10px;
 	float: left;
@@ -252,7 +252,7 @@ ul {
 
 #subscription_form {
 	width: 47.5%; /* (400px - 20px padding) 380px /800px */
-	padding: 0 /* 1.0869565217391% 5px/460px */ 2.1739130434783% /* 10px/460px */;
+	/* padding: 0 /* 1.0869565217391%; 5px/460px 2.1739130434783% 10px/460px */
 	background-color: rgba(0,61,115,0.5);
 	color: #fff;
 	border-radius: 10px;
