--- a/css/main.css
+++ b/css/main.css
@@ -243,7 +243,6 @@ ul {
 }
 
 #links {
-	display: inline;
 	width: 44.75%; /* (400px - 20px padding) 380px /800px */
 	padding: 0 2.6315789%; /* 10px/380px */
 	background-color: rgba(0,61,115,0.3);
@@ -257,7 +256,7 @@ ul {
 	background-color: rgba(0,61,115,0.5);
 	color: #fff;
 	border-radius: 10px;
-	float: right;
+	/* float: right; */
 }
 
 /* Media Queries ---------------------------------------------------------------
