--- a/css/main.css
+++ b/css/main.css
@@ -218,7 +218,7 @@ ol li {
 	padding: 0 2.6315789%; /* 10px/380px */
 	background-color: rgba(0,61,115,0.3);
 	border-radius: 10px;
-	/* float: left; */
+	float: left;
 }
 
 #subscription_form {
