--- a/css/main.css
+++ b/css/main.css
@@ -207,18 +207,18 @@ ol li {
 }
 
 #footer {
-	width: 100%; /* same width as wrapper */
+	width: 44.75%; /* (400px - 20px padding) 380px /800px */
 	color: #fff;
 	font-size: 1.25em; /*20px*/
 	text-shadow: 0px 1px 0px #000, 0px 0px 6px #000;
+	float: left;
 }
 
 #links {
-	width: 44.75%; /* (400px - 20px padding) 380px /800px */
+	width: 100%;
 	padding: 0 2.6315789%; /* 10px/380px */
 	background-color: rgba(0,61,115,0.3);
 	border-radius: 10px;
-	float: left;
 }
 
 #subscription_form {
