following table example

--- a/css/main.css
+++ b/css/main.css
@@ -263,6 +263,10 @@ ul {
 	clear: both;
 }
 
+td {
+	border: 1px solid #003d73;
+}
+
 /* Media Queries ---------------------------------------------------------------
 ------------------------------------------------------------------------------*/
 
