cahnging border color to white

--- a/css/main.css
+++ b/css/main.css
@@ -268,7 +268,7 @@ table {
 }
 
 td {
-	border: 1px solid #003d73;
+	border: 1px solid #fff;
 }
 
 /* Media Queries ---------------------------------------------------------------
