--- a/css/main.css
+++ b/css/main.css
@@ -280,6 +280,10 @@ th {
 	padding: .3em;
 }
 
+.odd_row {
+	background-color: #003d73;
+}
+
 /* Media Queries ---------------------------------------------------------------
 ------------------------------------------------------------------------------*/
 
