--- a/css/main.css
+++ b/css/main.css
@@ -250,8 +250,8 @@ ol li {
 	border-radius: 10px;
 }
 
-#checkbox {
-	display: inline;
+#subscribe {
+	margin: 0 0 15px;
 }
 
 /* pseudo classes for styling links */
